# xserver-xsdl

./: .gitignore  configure.ac
android/: build.sh  setCrossEnvironment-armeabi-v7a.sh
composite/: compalloc.c
dix/: events.c  window.c
hw/kdrive/: Makefile.am
hw/kdrive/sdl/: sdl.c
hw/kdrive/src/: kexeccmd.c
hw/kdrive/vrx/: Makefile.am  jni.c  kbd.c  mouse.c  os.c  vrx.c  vrx.h  vrx.md  vrxexport.h  vrxinit.c
mi/: misprite.c
os/: log.c
xkb/: ddxLoad.c
